public/grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(a) {
          return {
            reservedWords:        Array.from(reservedWords),
            initialConstantTable: initialConstantTable,
            functionTable:        functionTable,
            symbolTable:          symbolTable,
            result: a,
          };
        },
      peg$c1 = function(a) {
          return {  sentences: a };
        },
      peg$c2 = function(a) { return a; },
      peg$c3 = function(condA, codeA, codeB, codeC) {
          let ifCode     = {
            condition: condA,
            sentences: codeA.sentences
          };

          let elseCode = (codeC === null) ? {} : {
            sentences: codeC[2].sentences
          };

          let elseIfCode = [];
          codeB.forEach(x => elseIfCode.push({
            condition: x[1],
            sentences: x[3].sentences,
          }));

          return {
            type:       "IF",
            ifCode:     ifCode,
            elseIfCode: elseIfCode,
            elseCode:   elseCode
          }
        },
      peg$c4 = function(left, right) {
          var ops = [];
          ops.push(left);
          right.forEach(x => ops.push(x[1]));
          return {
            type:        "COMMA",
            operations:  ops
          };
        },
      peg$c5 = function(id, params) {

          id = id[1];
          saveFunctionInTable(id, resolveParams(params));
          depth++;
          idStack.push(id);
          return true;

        },
      peg$c6 = function(id, params, code) {

          depth--;
          idStack.pop();
          return true;

        },
      peg$c7 = function(id, params, code) {
          return {
            type:   "FUNCTION",
            id:     id[1],
            params: resolveParams(params),
            code:   code
          };
        },
      peg$c8 = function(left, condition, right, code) {
          return {
            type:      "LOOP",
            left:      left,
            condition: condition,
            right:     right,
            sentences: code
          };
        },
      peg$c9 = function(c, id, right) {

          id = id[1];
          var currSymbolTable = getCurrentSymbolTable();

          if (reservedWords.has(id))
            throw "'" + id + "' is a reserved word.";

          else if (c && (currSymbolTable[id] == "constant"))
            throw "Cant redeclare constant '" + id + "'.";

          else if (c && (currSymbolTable[id] == "volatile"))
            throw "Cant redeclare variable as constant " + id;

          else if (!c && (currSymbolTable[id] == "constant"))
            throw "Cant override value of constant " + id;

          currSymbolTable[id] = c ? "constant" : "volatile";

          return {
            type:  "ASSIGN",
            id:    id,
            right: right
          };
        },
      peg$c10 = function(left, op, right) {
          return {
            type:  "CONDITION",
            left:  left,
            op:    op[1],
            right: right
          };
        },
      peg$c11 = function(left, op, right) {
          return {
            type:  "expression",
            op:    op[1],
            left:  left,
            right: right
          };
        },
      peg$c12 = function(left, op, right) {
          return {
            type:  "MULOP",
            op:    op[1],
            left:  left,
            right: right
          };
        },
      peg$c13 = function(int) {
          return {
            type:  "NUM",
            value: parseInt(int[1])
          };
        },
      peg$c14 = function(assign) {
          return {
            type: "RETURN",
            assign: (assign == null ? {} : assign)
          };
        },
      peg$c15 = function() {
          return {
            type: "EXIT"
          };
        },
      peg$c16 = function(id, args) {

          id = id[1];

          var argsTable = functionTable[id].params  === undefined ? 0 : functionTable[id].params.length;
          var argsCall  = args.arguments.operations === undefined ? 0 : args.arguments.operations.length;

          if (!functionTable[id])
            throw "'" + id + "' not defined as function.";

          else if (argsTable != argsCall)
            throw "Invalid number of arguments for function '" + id + "'.";

          return {
            type: "CALL",
            args: args,
            id:   id
          };
        },
      peg$c17 = function(id) {

          id = id[1];

          var currSymbolTable = getCurrentSymbolTable();
          if ((currSymbolTable[id] != "volatile") && (currSymbolTable[id] != "constant"))
            throw id + " not defined as variable (or constant)";

          return {
            type: "ID",
            id: id
          };
        },
      peg$c18 = function(a) {
          return a;
        },
      peg$c19 = function(comma) {
          return {
            type:      "ARGUMENTS",
            arguments: (comma == null ? [] : comma)
          };
        },
      peg$c20 = peg$otherExpectation("integer"),
      peg$c21 = /^[ \t\n\r]/,
      peg$c22 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c23 = ",",
      peg$c24 = peg$literalExpectation(",", false),
      peg$c25 = "+",
      peg$c26 = peg$literalExpectation("+", false),
      peg$c27 = "-",
      peg$c28 = peg$literalExpectation("-", false),
      peg$c29 = "*",
      peg$c30 = peg$literalExpectation("*", false),
      peg$c31 = "=",
      peg$c32 = peg$literalExpectation("=", false),
      peg$c33 = "/",
      peg$c34 = peg$literalExpectation("/", false),
      peg$c35 = "(",
      peg$c36 = peg$literalExpectation("(", false),
      peg$c37 = ")",
      peg$c38 = peg$literalExpectation(")", false),
      peg$c39 = ";",
      peg$c40 = peg$literalExpectation(";", false),
      peg$c41 = "{",
      peg$c42 = peg$literalExpectation("{", false),
      peg$c43 = "}",
      peg$c44 = peg$literalExpectation("}", false),
      peg$c45 = "for",
      peg$c46 = peg$literalExpectation("for", false),
      peg$c47 = "return",
      peg$c48 = peg$literalExpectation("return", false),
      peg$c49 = "exit",
      peg$c50 = peg$literalExpectation("exit", false),
      peg$c51 = "function",
      peg$c52 = peg$literalExpectation("function", false),
      peg$c53 = "if",
      peg$c54 = peg$literalExpectation("if", false),
      peg$c55 = "else if",
      peg$c56 = peg$literalExpectation("else if", false),
      peg$c57 = "else",
      peg$c58 = peg$literalExpectation("else", false),
      peg$c59 = "const",
      peg$c60 = peg$literalExpectation("const", false),
      peg$c61 = /^[0-9]/,
      peg$c62 = peg$classExpectation([["0", "9"]], false, false),
      peg$c63 = /^[a-z_]/i,
      peg$c64 = peg$classExpectation([["a", "z"], "_"], false, true),
      peg$c65 = /^[a-z0-9_]/i,
      peg$c66 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true),
      peg$c67 = /^[<>!=]/,
      peg$c68 = peg$classExpectation(["<", ">", "!", "="], false, false),
      peg$c69 = /^[<>]/,
      peg$c70 = peg$classExpectation(["<", ">"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsesentences();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsesentences() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsesentence();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsesentence();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsesentence() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseif_statement();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c2(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseloop_statement();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsefunction_statement();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseassign();
          if (s1 !== peg$FAILED) {
            s2 = peg$parseSEMICOLON();
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c2(s1);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseif_statement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    s1 = peg$parseIF();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsecondition();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseLEFTBRACE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesentences();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseRIGHTBRACE();
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$currPos;
              s8 = peg$parseELIF();
              if (s8 !== peg$FAILED) {
                s9 = peg$parsecondition();
                if (s9 !== peg$FAILED) {
                  s10 = peg$parseLEFTBRACE();
                  if (s10 !== peg$FAILED) {
                    s11 = peg$parsesentences();
                    if (s11 !== peg$FAILED) {
                      s12 = peg$parseRIGHTBRACE();
                      if (s12 !== peg$FAILED) {
                        s8 = [s8, s9, s10, s11, s12];
                        s7 = s8;
                      } else {
                        peg$currPos = s7;
                        s7 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$currPos;
                s8 = peg$parseELIF();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parsecondition();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseLEFTBRACE();
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parsesentences();
                      if (s11 !== peg$FAILED) {
                        s12 = peg$parseRIGHTBRACE();
                        if (s12 !== peg$FAILED) {
                          s8 = [s8, s9, s10, s11, s12];
                          s7 = s8;
                        } else {
                          peg$currPos = s7;
                          s7 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s7;
                        s7 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$currPos;
                s8 = peg$parseELSE();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseLEFTBRACE();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parsesentences();
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parseRIGHTBRACE();
                      if (s11 !== peg$FAILED) {
                        s8 = [s8, s9, s10, s11];
                        s7 = s8;
                      } else {
                        peg$currPos = s7;
                        s7 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3(s2, s4, s6, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecomma() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseassign();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseCOMMA();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseassign();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseassign();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefunction_statement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parseFUNCTION();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseID();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseLEFTPAR();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          s5 = peg$parseID();
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$currPos;
            s8 = peg$parseCOMMA();
            if (s8 !== peg$FAILED) {
              s9 = peg$parseID();
              if (s9 !== peg$FAILED) {
                s8 = [s8, s9];
                s7 = s8;
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
            } else {
              peg$currPos = s7;
              s7 = peg$FAILED;
            }
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$currPos;
              s8 = peg$parseCOMMA();
              if (s8 !== peg$FAILED) {
                s9 = peg$parseID();
                if (s9 !== peg$FAILED) {
                  s8 = [s8, s9];
                  s7 = s8;
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
            }
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseRIGHTPAR();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseLEFTBRACE();
              if (s6 !== peg$FAILED) {
                peg$savedPos = peg$currPos;
                s7 = peg$c5(s2, s4);
                if (s7) {
                  s7 = void 0;
                } else {
                  s7 = peg$FAILED;
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsesentences();
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = peg$currPos;
                    s9 = peg$c6(s2, s4, s8);
                    if (s9) {
                      s9 = void 0;
                    } else {
                      s9 = peg$FAILED;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseRIGHTBRACE();
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c7(s2, s4, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseloop_statement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
